@@ -54,6 +54,7 @@
  * generate hints for replicas that timeout, not just replicas that are known
    to be down before starting (CASSANDRA-2034)
  * Make the compression algorithm and chunk length configurable (CASSANDRA-3001)
+ * Add throttling for internode streaming (CASSANDRA-3080)
 
 0.8.5
  * fix NPE when encryption_options is unspecified (CASSANDRA-3007)
